# Image_Classifier

./: .gitignore  DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  LICENSE  Makefile  README.md  REAL_DATA_TRAINING.md  TRAINING_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  train.py  train_model.py
configs/: augmentations.yaml  inference.yaml  model.yaml  train.yaml
docker/: Dockerfile.api  Dockerfile.train  Dockerfile.ui
src/docshield/: __init__.py  inference.py
src/docshield/api/: __init__.py  main.py
src/docshield/data/: datasets.py  pdf_to_image.py  synth_dummy_data.py  transforms.py
src/docshield/models/: efficientnet.py  factory.py  heads.py  vit.py
src/docshield/train/: __init__.py  eval.py  metrics.py  train_advanced.py  train_real_data.py  train_synthetic.py  tune.py  utils.py
src/docshield/ui/: __init__.py  app.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_datasets.py  test_inference.py  test_pdf_to_image.py  test_synth_dummy_data.py  test_transforms.py
